--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
     <img class="prf-pic" src="./Images/prfpic.jpg">
     <h1>Sri hari</h1>
-    <h3>React | Javascript | Python</h3>
+    <h3>React | Javascript | Python | Linux</h3>
     <h5>You can contact me <a style="text-decoration:underline;" target='_blanck' href="https://vsrihari.co">here</a></h5>
     <p id="switch" onclick=switchteme()>Try out dark mode</p>
 </div>
