--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Srihari | Javasript developer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">  
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./style.css" type="text/css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Alegreya+Sans&family=Merriweather&family=Merriweather+Sans&family=Nunito&family=Nunito+Sans&family=Quattrocento&family=Quattrocento+Sans&family=Roboto&family=Roboto+Mono&family=Roboto+Slab&display=swap" rel="stylesheet">
+  </head>
   <body>
-<div class="content">
-    <section>
-        <div class="container">
-    <img class="prf-pic" src="./Images/prfpic.jpg">
-    <h1>Sri hari</h1>
-    <h3>React | Javascript | Python | Linux</h3>
-    <h5>You can contact me <a style="text-decoration:underline;" target='_blanck' href="https://vsrihari.co">here</a></h5>
-    <p id="switch" onclick=switchteme()>Try out dark mode</p>
-</div>
-</section>
-</div>
-<script src="./script.js"></script>
+    <div class="container">
+      <img class="prf-pic" src="./Images/prfpic.jpg" />
+      <h1>Sri hari</h1>
+      <h3>React | Javascript | Python | Linux</h3>
+      <p class="about">
+        It is a long established fact that a reader will be distracted by the
+        readable content of a page when looking at its layout. The point of
+        using Lorem Ipsum is that it has a more-or-less normal distribution of
+        letters, as opposed to using 'Content here, content here', making it
+        look like readable English.
+      </p>
+      <h5>
+        You can contact me
+        <a
+          style="text-decoration: underline;"
+          target="_blanck"
+          href="https://vsrihari.co"
+          >here</a
+        >
+      </h5>
+    </div>
+    <div class="res-container">
+      <div class="btn-container">
+        <div>
+          <button class="switch-btn" onclick="switchprev()"><<</button>
+          <button class="switch-btn" onclick="saver()">Save</button>
+          <button class="switch-btn" onclick="switchnext()">>></button>
+        </div>
+        <button id="animbtn" class="main-btn" onclick="startanim()">
+          Start Switching
+        </button>
+      </div>
+      <div class="js-saved-container"></div>
+    </div>
+    <script src="./script.js"></script>
   </body>
 </html>
